--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <br />
                 <br />
                 <input
-                  id="nivel"
+                  id="nivelElegido"
                   type="text"
                   name="curso"
                   placeholder="nivel"
@@ -105,7 +105,7 @@
     </div>
 
     <!-- aquí con src linkeo con archivo js -->
-    <!-- url de jquery va primero para que pueda utilizarla -->
+    <!-- url de jquery va primero para que pueda utilizarla sus variables -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./scripts/functions.js"></script>
     <script src="./scripts/globals.js "></script>
