animaciones sobre cajas inferiores

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
     <!-- aquí con src linkeo con archivo js -->
     <!-- url de jquery va primero para que pueda utilizarla sus variables -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+      <!-- cdn color animation -->
+    <script src="./scripts/jquery.animate-colors-min.js"></script>
     <script src="./scripts/functions.js"></script>
     <script src="./scripts/globals.js "></script>
   </body>
