--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="#">Sobre Nosotros</a>
-            <a class="nav-link" href="#">Otros Servicios</a>
             <a class="nav-link disabled">Contacto</a>
           </div>
         </div>
@@ -163,11 +162,20 @@
 
       <div class="right-box">
         <div id="divDetalleCompra"></div>
+        </div>
 
         <!-- div de dinero e inscripción  -->
         <div id="inputDinero"></div>
       </div>
-      <footer class="footer"></footer>
+      <footer class="footer">
+      
+          <!-- contenedor weather -->
+          <div class="weather-container">
+            <p class="cityname">La temperatura de </p>
+            <p class="temp"></p>
+            <img class="icon">
+        </div>
+      </footer>
     </div>
 
     <!-- aquí con src linkeo con archivo js -->
