--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Sobre Nosotros</a>
+            <a class="nav-link disabled" href="#">Sobre Nosotros</a>
             <a class="nav-link disabled">Contacto</a>
           </div>
         </div>
